--- a/index.html
+++ b/index.html
@@ -222,7 +222,8 @@ Adding Server [irc.freenode.net 6667]...
 						<li>Ruby on Rails
 						<li>Active Record
 						<li>Calls docker CLI with backtick commands.
-						<li class="fragment">A retard like me can understand it... just.
+						<li class="fragment">I can understand it enough to hack at it.
+						<li class="fragment">A real dev could write it from scratch in an hour or so.
 					</ul>
 				</section>
 
@@ -304,7 +305,7 @@ end
 					<h2>Over the course of the next hour...</h2>
 					<ul>
 						<li class="fragment">Working prototype in Vagrant
-						<li class="fragment">Create Rackspace public cloud instance <br><i>(&lt;3 dev free cloud promo)</i>i>
+						<li class="fragment">Create Rackspace public cloud instance <br><i>(&lt;3 dev free cloud promo)</i>
 						<li class="fragment">Config server using Chef Enterprise <i>(5 servers free)</i>
 						<li class="fragment">Upload code with scp
 						<li class="fragment">rails server -d -e production
