--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 					<h1>Docker</h1>
 					<h3>I built a SaaS and I shipped it</h3>
 					<h4>in a single afternoon</h4>
+					<p><i>and RackSpace hosted it for free*</i></p>
 					<p>
 						<small>Created by <a href="http://tech.paulcz.net">Paul Czarkowski</a> / <a href="http://twitter.com/pczarkowski">@pczarkowski</a></small>
 					</p>
@@ -217,6 +218,12 @@ Adding Server [irc.freenode.net 6667]...
 				</section>
 
 				<section>
+				<h1>Opensource 101</h1>
+				<h2>If you fix something ...  give it back!</h2>
+				<p><img src="images/memcached-pr.png">
+				</section>
+
+				<section>
 					<h2>Turns out its a fairly simply app</h2>
 					<ul>
 						<li>Ruby on Rails
@@ -338,7 +345,8 @@ done
 
 				<section>
 					<h2>Live Demo!</h2>
-					<img src="images/livedemo.jpg">
+					<img src="images/livedemo.jpg"><br>
+					<a href="http://znc.paulcz.net">http://znc.paulcz.net</a>
 				</section>
 
 
